# truth-tracking

./: .gitignore  README.md  pyproject.toml
example-results-plots/: batchpq_20260206_174635_n6_x1_nbr1000_ms100000_ws50_fw50_seednone_stop1_initflat_fast0.csv
truth_tracking/: __init__.py  benchmarks.py  cli.py  formula_generation.py  plotting.py  ranking.py  run_simulation.py  worlds.py
