[project]
name = "truth-tracking"
version = "0.1.0"
description = "Simulation of epistemic ranking-function evolution under stochastic improvement updates."
authors = [
  { name = "Nicolas Schwind", email = "schwindn@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy (>=2.1.0,<3.0.0)",
  "pandas (>=2.2.0,<3.0.0)",
  "typer (>=0.12.0,<1.0.0)",
  "rich (>=13.9.0,<14.0.0)",
  "matplotlib (>=3.9.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "truth-tracking"
description = "Simulation of epistemic ranking-function evolution under stochastic improvement updates."
packages = [
  { include = "truth_tracking" }
]

[tool.poetry.scripts]
truth-tracking = "truth_tracking.cli:main"
